@@ -24,6 +24,10 @@ matrix:
     - env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
     - env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
   include:
+    - env: STERILIZE_ENV=0 COVERAGE_TESTING=1
+      perl: 5.21
+    - env: STERILIZE_ENV=1
+      perl: 5.21
     - env: STERILIZE_ENV=0
       perl: 5.8
     - env: STERILIZE_ENV=0
@@ -44,13 +48,10 @@ matrix:
       perl: 5.10
     - env: STERILIZE_ENV=1
       perl: 5.20
-    - env: STERILIZE_ENV=1
-      perl: 5.21
     - env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
       perl: 5.21
     - env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
       perl: 5.21
-    - env: STERILIZE_ENV=0 COVERAGE_TESTING=1
-      perl: 5.21
 script:
   - time perl ./maint-travis-ci/script.pl
+sudo: false
